--- a/app/src/main/res/layout/activity_list_car.xml
+++ b/app/src/main/res/layout/activity_list_car.xml
@@ -16,8 +16,19 @@
         android:id="@+id/shop_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightGray">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="9dp"
+        android:background="@color/lightGray"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
 
